{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 26,
  "lineage": "aac8ca14-28f1-313c-6f9d-bb582f15e891",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_pandas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0254b2d5c4c472488",
            "arn": "arn:aws:ec2:us-east-1:815254799362:instance/i-020792ee5b4901ace",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ssm-instance-profile-pandas",
            "id": "i-020792ee5b4901ace",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-026deba6511e0892e",
            "private_dns": "ip-172-31-24-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.27",
            "public_dns": "ec2-54-198-134-105.compute-1.amazonaws.com",
            "public_ip": "54.198.134.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Owner": "gajeto",
                  "Topic": "terraform"
                },
                "tags_all": {
                  "Owner": "gajeto",
                  "Topic": "terraform"
                },
                "throughput": 0,
                "volume_id": "vol-00f4039912754f45c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls-pandas"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b781b4f1a0b0fad0",
            "tags": {
              "Name": "ec2_pandas"
            },
            "tags_all": {
              "Name": "ec2_pandas",
              "Owner": "gajeto",
              "Topic": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-04e48fbce219c6fa3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ec2_ssm",
            "module.ec2.aws_iam_role.ec2_ssm",
            "module.ec2.aws_security_group.ec2_pandas",
            "module.ec2.data.aws_ami.ec2_pandas"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_pandas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815254799362:security-group/sg-04e48fbce219c6fa3",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-04e48fbce219c6fa3",
            "ingress": [],
            "name": "allow_tls-pandas",
            "name_prefix": "",
            "owner_id": "815254799362",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Owner": "gajeto",
              "Topic": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-009f79b9a7fa135ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_pandas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815254799362:security-group-rule/sgr-0fba599005fab665d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fba599005fab665d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04e48fbce219c6fa3",
            "security_group_rule_id": "sgr-0fba599005fab665d",
            "tags": null,
            "tags_all": {
              "Owner": "gajeto",
              "Topic": "terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.ec2_pandas"
          ]
        }
      ]
    }
  ]
}